# kvp-blockchain

./: .gitattributes  .gitignore  Cargo.toml  Header.txt  License  README.md  allfiles.txt  files.txt  readme_241124.md
Orig Data/: Login.js  Register.js  auth_middleware-orig.rs  main-orig.rs
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.js  App.test.js  reportWebVitals.js  setupTests.js
frontend/src/components/: BlockDetails.js  BlockList.js  Dashboard.js  KYCForm.js  LoginForm.js  RegisterForm.js  StatsSidebar.js
frontend/src/utils/: api.js
src/: main.rs  models.rs
src/db/: README-db.md  admin_table.sql  block_table.sql  dao_proposal.sql  dao_votes.sql  game_session.sql  gamefi.sql  kyc_approval.sql  kyc_submission.sql  kyc_submission_relation_from_user.sql  marketplace_table.sql  mining_reward.sql  nft_table.sql  pool_allocation.sql  pool_reward.sql  regist_table.sql  session_table.sql  transaction_table.sql  trigger_kyc_submission_from_user.sql  user_table.sql  verif_kyc_admin.sql  verif_kyc_auto.sql
src/db/Backup/: backup_manifest
src/db/Foreign Key/: data-1732684188519.csv
src/middleware/: auth_middleware.rs  mod.rs
src/routes/: admin.rs  auth.rs  kyc.rs  mod.rs
src/utils/: mod.rs  time.rs
tests/: admin_routes.http  kyc_approval_test.http  kyc_submit_test.http  login_test.http  register_test.http  update_reward_pool.http
