# -----------------------------------------------------------------------------
# KVP Blockchain - Created from scratch by Kraken (Hendri RH) and Bro CG
# 
# This project is a groundbreaking blockchain solution focused on:
# - Lightweight and efficient design
# - High-speed transactions
# - Environmentally friendly and resource-optimized mechanisms
# 
# Built with Rust to ensure performance and reliability.
# 
# All rights reserved © 2024 Kraken & Bro CG
# -----------------------------------------------------------------------------

[package]
name = "kvp"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
digest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = "0.4"
chrono-tz = "0.6"
warp = "0.3"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.15"
bcrypt = "0.13"  # Untuk hashing dan verifikasi password
uuid = { version = "1.2", features = ["v4"] }  # Untuk UUID (user_id, kyc_id)
jsonwebtoken = "8.1.1"